# ootd-mate

./: .env.example  .gitignore  AUTH_SETUP.md  TESTING_SUMMARY.md  TEST_DELIVERABLES.md  TEST_SUMMARY.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: package.json  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py  deps.py
apps/backend/app/api/endpoints/: auth.py  profiles.py
apps/backend/app/core/: config.py
apps/backend/app/storage/: __init__.py  interface.py  local.py
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20260112152636_init/: migration.sql
apps/backend/tests/: README.md  conftest.py  test_auth_endpoints.py  test_config.py  test_main.py  test_profiles.py
apps/frontend/: package.json
apps/frontend/src/: middleware.ts
apps/frontend/src/__tests__/: README.md
apps/frontend/src/__tests__/components/profile/: ProfileForm.test.tsx  StylePreferences.test.tsx
apps/frontend/src/__tests__/lib/api/: profile.test.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/(auth)/login/: page.tsx
apps/frontend/src/app/auth/callback/: page.tsx
apps/frontend/src/app/profile/: page.tsx
apps/frontend/src/components/: vibe-kanban-wrapper.tsx
apps/frontend/src/components/profile/: ProfileForm.tsx  StylePreferences.tsx
apps/frontend/src/lib/: api.ts  auth.ts
apps/frontend/src/lib/api/: profile.ts
docs/: SPEC.md
