[project]
name = "ootd-mate-backend"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "prisma>=0.15.0",
    "httpx>=0.28.1",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
]
