[project]
name = "ootd-mate-backend"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "prisma>=0.15.0",
    "httpx>=0.28.1",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=app/api",
    "--cov=app/core",
    "--cov=app/main.py",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
